--- a/server/views/page/list.ejs
+++ b/server/views/page/list.ejs
@@ -1,11 +1,38 @@
 <%- include ../partials/header.ejs %>
 
-    <%- include ../partials/main_nav.ejs %>
-
-        <!-- Main Content -->
+<%- include ../partials/main_nav.ejs %>
+<div>
+    <div>
+        <h1>Surveys</h1>
         <br>
-        <main class="container mt-5 mb-3">
-            <h1 class="text-center">Surveys</h1>
-        </main>
+        <table>
+            <!-- Header Row -->
+            <tr>
+                <th>Survey Name</th>
+                <th>Description</th>
+                <th>End Date</th>
+                <th>Take Survey</th>
+            </tr>
 
-        <%- include ../partials/footer.ejs %>
+            <!-- Repeatable Template Row -->
+            <% for(let item of SurveyList) { %>
+                <tr>
+                    <td>
+                        <%= item.title %>
+                    </td>
+                    <td>
+                        <%= item.description %>
+                    </td>
+                    <td>
+                        <%= item.endTime.toISOString().split('T')[0] %>
+                    </td>
+                    <td>
+                        <a href="/survey/take/<%= item._id %>">
+                            <i class="bi bi-check-square"></i>Take Survey</a>
+                    </td>
+                </tr>
+            <% } %>
+        </table>
+    </div>
+</div>
+<%- include ../partials/footer.ejs %>
