--- a/server/views/page/list.ejs
+++ b/server/views/page/list.ejs
@@ -12,6 +12,8 @@
                 <th>Description</th>
                 <th>End Date</th>
                 <th>Take Survey</th>
+                <th>EDIT Survey</th>
+                <th>DELETE Survey</th>
             </tr>
 
             <!-- Repeatable Template Row -->
@@ -29,6 +31,14 @@
                     <td>
                         <a href="/survey/take/<%= item._id %>">
                             <i class="bi bi-check-square"></i>Take Survey</a>
+                    </td>
+                    <td>
+                        <a href="/survey/update/<%= item._id %>">
+                            <i class="bi bi-check-square"></i>EDIT Survey</a>
+                    </td>
+                    <td>
+                        <a href="/survey/delete/<%= item._id %>">
+                            <i class="bi bi-check-square"></i>DELETE Survey</a>
                     </td>
                 </tr>
             <% } %>
