--- a/server/views/page/edit.ejs
+++ b/server/views/page/edit.ejs
@@ -23,29 +23,32 @@
             <label for="endDate">End Date</label>
             <input type="date" id="endDate" name="endTime" required value="<%= survey.endTime %>">
         </div>
-            <div class="question-fields" hidden="true">
-                <label for="questionType">Question Type</label>
-                <select name="questionType" id="questionType">
-                    <option value="<%= survey.questions[0].qType %>"><%= survey.questions[0].qType %></option>
-                </select>
-            </div>    
+        <div class="question-fields" hidden="true">
+            <label for="questionType">Question Type</label>
+            <select name="questionType" id="questionType">
+                <option value="<%= survey.questions[0].qType %>"><%= survey.questions[0].qType %></option>
+            </select>
+        </div>    
         <div id="questionFields">
             <% survey.questions.forEach((question, index) => { %>
                 <div class="questionField" data-question-type="<%= question.qType %>">
-
                     <label for="question<%= index %>Text">Question <%= index + 1 %></label>
-                    <input type="text" id="question<%= index %>Text" required value="<%= question.qText %>">
-                    <input type="hidden"value="<%= question._id %>">
-                    <input type="hidden" value="<%= question.qType %>">
                     <% if (question.qType === 'multiple_choice') { %>
-                    <% question.options.forEach((option, optIndex) => { %>
-                    <div class="choicesContainer">
-                        <input type="text" class="choiceText" required value="<%= option %>">
-                        <button type="button" class="removeChoice">Remove</button>
-                    </div>
-                    <% }) %>
-                    <button type="button" class="addChoice">Add Choice</button>
+                        <!-- 生成多选题 -->
+                        <input type="text" id="question<%= index %>Text" required value="<%= question.qText %>">
+                        <% question.options.forEach((option, optIndex) => { %>
+                            <div class="choicesContainer">
+                                <input type="text" class="choiceText" required value="<%= option %>">
+                                <button type="button" class="removeChoice">Remove</button>
+                            </div>
+                        <% }) %>
+                        <button type="button" class="addChoice">Add Choice</button>
+                    <% } else if (question.qType === 'short_answers') { %>
+                        <!-- 生成简答题 -->
+                        <textarea id="question<%= index %>Text" required><%= question.qText %></textarea>
                     <% } %>
+                    <input type="hidden" value="<%= question._id %>">
+                    <input type="hidden" value="<%= question.qType %>">
                     <button type="button" class="deleteQuestion">Delete Question</button>
                 </div>
             <% }) %>
@@ -56,6 +59,5 @@
         <button type="submit">Update</button>
     </form>
 </div>
-
 <%- include ../partials/footer.ejs %>
 <script src="/server/views/scripts/EditQuestion.js"></script>
