--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -1,10 +1,21 @@
 <%- include ../partials/header.ejs %>
-    <%- include ../partials/main_nav.ejs %>
 
-        <div class="container">
-            <h1>
-                login
-            </h1>
-        </div>
+<%- include ../partials/main_nav.ejs %>
+<h1>Login</h1>
+<% if (messages.error) { %>
+  <%= messages.error %>
+<% } %>
+<form method="POST">
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+  </div>
+  <div>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" required>
+  </div>
+  <button type="submit">Login</button>
+</form>
+<a href="/users/register">Register</a>
 
-        <%- include ../partials/footer.ejs %>
+<%- include ../partials/footer.ejs %>
