--- a/server/views/auth/register.ejs
+++ b/server/views/auth/register.ejs
@@ -1,10 +1,22 @@
 <%- include ../partials/header.ejs %>
-    <%- include ../partials/main_nav.ejs %>
 
-        <div class="container">
-            <h1>
-                register
-            </h1>
-        </div>
+<%- include ../partials/main_nav.ejs %>
+<h1>Register</h1>
+<form method="POST">
+  <div>
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username" required>
+  </div>
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" required>
+  </div>
+  <div>
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" required>
+  </div>
+  <button type="submit">Register</button>
+</form>
+<a href="/users/login">Login</a>
 
-        <%- include ../partials/footer.ejs %>
+<%- include ../partials/footer.ejs %>
