--- a/server/views/page/list.ejs
+++ b/server/views/page/list.ejs
@@ -12,26 +12,25 @@
                 <th>Description</th>
                 <th>End Date</th>
                 <th>Take Survey</th>
-                <th>EDIT Survey</th>
-                <th>DELETE Survey</th>
+                <% if (isLogin) { %>
+                    <th>EDIT Survey</th>
+                    <th>DELETE Survey</th>
+                <% } %>
             </tr>
 
-            <!-- Repeatable Template Row -->
-            <% for(let item of SurveyList) { %>
-                <tr>
-                    <td>
-                        <%= item.title %>
-                    </td>
-                    <td>
-                        <%= item.description %>
-                    </td>
-                    <td>
-                        <%= item.endTime.toISOString().split('T')[0] %>
-                    </td>
-                    <td>
-                        <a href="/survey/take/<%= item._id %>">
-                            <i class="bi bi-check-square"></i>Take Survey</a>
-                    </td>
+           <!-- Repeatable Template Row -->
+           <% for(let item of SurveyList) { %>
+            <tr>
+                <td>
+                    <%= item.title %>
+                </td>
+                <td>
+                    <%= item.description %>
+                </td>
+                <td>
+                    <%= item.endTime.toISOString().split('T')[0] %>
+                </td>
+                <% if (isLogin) { %>
                     <td>
                         <a href="/survey/update/<%= item._id %>">
                             <i class="bi bi-check-square"></i>EDIT Survey</a>
@@ -40,9 +39,14 @@
                         <a href="/survey/delete/<%= item._id %>">
                             <i class="bi bi-check-square"></i>DELETE Survey</a>
                     </td>
-                </tr>
-            <% } %>
-        </table>
+                <% } %>
+                <td>
+                    <a href="/survey/take/<%= item._id %>">
+                        <i class="bi bi-check-square"></i>Take Survey</a>
+                </td>
+            </tr>
+        <% } %>
+    </table>
     </div>
 </div>
 <%- include ../partials/footer.ejs %>
