--- a/server/views/partials/header.ejs
+++ b/server/views/partials/header.ejs
@@ -4,11 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= title%></title>
   <!-- CSS Section -->
-  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css"> <!--Do not need to mention node_module because the path is already mentioned in app.js-->
-  <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
-  <link rel='stylesheet' href='/content/app.css' />
+  
+  <!-- <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">  -->
+  <!--Do not need to mention node_module because the path is already mentioned in app.js-->
+  <!-- <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css"> -->
+  <!-- <link rel='stylesheet' href='/content/app.css' /> -->
 
 </head>
 <body>
