--- a/server/views/auth/login.ejs
+++ b/server/views/auth/login.ejs
@@ -1,10 +1,14 @@
 <%- include ../partials/header.ejs %>
 
-<%- include ../partials/main_nav.ejs %>
 <h1>Login</h1>
-<% if (messages.error) { %>
-  <%= messages.error %>
-<% } %>
+<div class="message">
+  <!-- Message Area -->
+  <% if(messages.length > 0) {%>
+  <div class="alert alert-danger">
+      <%= messages %>
+  </div>
+  <% } %>
+</div>
 <form method="POST">
   <div>
     <label for="email">Email</label>
