--- a/server/views/page/managelist.ejs
+++ b/server/views/page/managelist.ejs
@@ -1,6 +1,7 @@
 <%- include ../partials/header.ejs %>
 
 <%- include ../partials/main_nav.ejs %>
+<a href="/survey/add/">Create Survey</a>
 <div>
     <div>
         <h1>Surveys</h1>
@@ -11,7 +12,8 @@
                 <th>Survey Name</th>
                 <th>Description</th>
                 <th>End Date</th>
-                <th>Take Survey</th>
+                <th>EDIT Survey</th>
+                <th>DELETE Survey</th>
             </tr>
 
            <!-- Repeatable Template Row -->
@@ -26,12 +28,16 @@
                 <td>
                     <%= item.endTime.toISOString().split('T')[0] %>
                 </td>
-                <td>
-                    <a href="/survey/take/<%= item._id %>">
-                        <i class="bi bi-check-square"></i>Take Survey</a>
-                </td>
+                    <td>
+                        <a href="/survey/update/<%= item._id %>">
+                            <i class="bi bi-check-square"></i>EDIT Survey</a>
+                    </td>
+                    <td>
+                        <a href="/survey/delete/<%= item._id %>" onclick="return confirm('Are you sure you want to delete?')">
+                            <i class="bi bi-check-square"></i>DELETE Survey</a>
+                    </td>
             </tr>
-            <% } %>
+        <% } %>
     </table>
     </div>
 </div>
