--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -1,6 +1,31 @@
-
-  <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
-    <div>
-      main
+<!-- 导航栏 -->
+<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="/"></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/"> Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/survey/list"> Surveys</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="/survey/manage">My Surveys</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+        <!-- If displayName is a string and exists -->
+        <% if(username) { %>
+          <li class="navbar-text"> Welcome, <%= username %></li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <li class="nav-item"><a href="/users/logout" class="nav-link" onclick="return confirm('Are you sure you want to logout?')">Logout</a></li>
+        <% } else { %>
+          <li class="nav-item"><a href="/users/login" class="nav-link" >Login</a></li>
+        <% } %>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
