--- a/server/views/page/managelist.ejs
+++ b/server/views/page/managelist.ejs
@@ -1,11 +1,11 @@
 <%- include ../partials/header.ejs %>
 
 <%- include ../partials/main_nav.ejs %>
-<a href="/survey/add/">Create Survey</a>
 <div>
     <div>
         <h1>Surveys</h1>
         <br>
+        <a href="/survey/add">Add Survey</a>
         <table>
             <!-- Header Row -->
             <tr>
@@ -28,17 +28,28 @@
                 <td>
                     <%= item.endTime.toISOString().split('T')[0] %>
                 </td>
-                    <td>
-                        <a href="/survey/update/<%= item._id %>">
-                            <i class="bi bi-check-square"></i>EDIT Survey</a>
-                    </td>
-                    <td>
-                        <a href="/survey/delete/<%= item._id %>" onclick="return confirm('Are you sure you want to delete?')">
-                            <i class="bi bi-check-square"></i>DELETE Survey</a>
-                    </td>
+                <td>
+                    <a href="/survey/update/<%= item._id %>">
+                        <i class="bi bi-check-square"></i>EDIT Survey</a>
+                </td>
+                <td>
+                    <a href="/survey/delete/<%= item._id %>" onclick="return confirm('Are you sure you want to delete?')">
+                        <i class="bi bi-check-square"></i>DELETE Survey</a>
+                </td>
             </tr>
-        <% } %>
-    </table>
+            <% } %>
+        </table>
+        
+        <!-- Pagination Controls -->
+        <div>
+            <% if(currentPage > 1) { %>
+                <a href="/survey/manage?page=<%= currentPage - 1 %>">Prev</a>
+            <% } %>
+            Page <%= currentPage %> of <%= totalPages %>
+            <% if(currentPage < totalPages) { %>
+                <a href="/survey/manage?page=<%= currentPage + 1 %>">Next</a>
+            <% } %>
+        </div>
     </div>
 </div>
 <%- include ../partials/footer.ejs %>
